--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                         <ul>
                             <li>
                                 <i class="fa-solid fa-less-than"></i>
-                                <span>home</span>
+                                <span><a href="#home">home</a></span>
                                 <i class="fa-solid fa-greater-than"></i>     
                             </li>
                             <li>
                                 <i class="fa-solid fa-less-than"></i>
-                                <span>experiences</span>
+                                <span><a href="#experiences">experiences</a></span>
                                 <i class="fa-solid fa-greater-than"></i>     
                             </li>
                             <li>
                                 <i class="fa-solid fa-less-than"></i>
-                                <span>projects</span>
+                                <span><a href="#allProjects">projects</a></span>
                                 <i class="fa-solid fa-greater-than"></i>     
                             </li>
                         </ul>
@@ -128,7 +128,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="experiences">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-12">
@@ -191,7 +191,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="allProjects">
         <div class="container">
             <div class="row project-stability">
                 <div class="col-md-6 col-12">
