--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                         <ul>
                             <li>
                                 <i class="fa-solid fa-less-than"></i>
-                                <span><a href="#home">home</a></span>
+                                <span><a href="#home" style="color:#fff">home</a></span>
                                 <i class="fa-solid fa-greater-than"></i>     
                             </li>
                             <li>
                                 <i class="fa-solid fa-less-than"></i>
-                                <span><a href="#experiences">experiences</a></span>
+                                <span><a href="#experiences" style="color:#fff">experiences</a></span>
                                 <i class="fa-solid fa-greater-than"></i>     
                             </li>
                             <li>
                                 <i class="fa-solid fa-less-than"></i>
-                                <span><a href="#allProjects">projects</a></span>
+                                <span><a href="#allProjects" style="color:#fff">projects</a></span>
                                 <i class="fa-solid fa-greater-than"></i>     
                             </li>
                         </ul>
