--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                                 <img src="https://cdn-icons-png.flaticon.com/256/174/174857.png" alt=""/>
                             </li>
                             <li>
-                                <img src="https://cdn.icon-icons.com/icons2/2157/PNG/512/github_git_hub_logo_icon_132878.png" alt=""/>
+                                <a herf="https://github.com/18-05-Amankumarverma"><img src="https://cdn.icon-icons.com/icons2/2157/PNG/512/github_git_hub_logo_icon_132878.png" alt=""/></a>
+                                
                             </li>
                             <li>
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/600px-Instagram_icon.png" alt=""/>
