--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         </div>
                         <div id="btn_links">
                             <div id="p_btn">
-                                Visit
+                                <a href="https://github.com/18-05-Amankumarverma/collegeManagementSystem-.git">Visit</a>
                             </div>
 
                             <div id="icon">
